(BSR)[PRO] fix: prevent wrong right margin due to gap with empty top-area

--- a/pro/src/pages/Homepage/NewHomepage.module.scss
+++ b/pro/src/pages/Homepage/NewHomepage.module.scss
@@ -34,6 +34,10 @@
 
 .top {
   grid-area: top-area;
+
+  &:empty {
+    display: none;
+  }
 }
 
 .main {
